# django-section

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  manage.py  pyproject.toml
app/common/: serializers.py
app/common/tests/: fixtures.py
app/config/: asgi.py  urls.py  wsgi.py
app/config/settings/: dev.py  main.py  tests.py
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py
app/users/rest/: serializers.py
app/users/tests/: factories.py
app/videos/: admin.py  models.py  querysets.py
app/videos/migrations/: 0001_initial.py  0002_rename_like_count_video_likes_delete_like.py  0003_alter_videofile_video.py  0004_alter_videofile_unique_together.py  0005_rename_likes_video_like_count_like.py  0006_rename_owner_like_user_alter_like_unique_together.py  0007_rename_like_count_video_likes_count.py  0008_alter_videofile_video.py  0009_rename_likes_count_video_total_likes.py  0010_alter_video_created_at.py  0011_alter_videofile_quantity.py  0012_rename_quantity_videofile_quality_and_more.py
app/videos/rest/: serializers.py  urls.py  views.py
app/videos/rest/tests/: test_views.py
app/videos/services/: likes.py
app/videos/tests/: factories.py
docker/: dev.storages.yaml
